Tue May 24 10:58:53 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:

          Add missing include.

Tue May 24 09:47:52 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          Disable fuzz check, because it can't detect the try/catch
        in the calling function.

Tue May 24 09:14:57 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestServer.h:
        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          This example was simply copied from 1.4a, and I forgot to make
        the adjustments required by the POA refactoring.

        * tao/ImR_Client/ImplRepoC.h:

          The ImplRepo.pidl had #include ServerObject.pidl, but didn't include
        ServerObjectC.h. For now, I manually added the include, but this isn't
        a final solution.

Mon May 23 14:50:27 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/Advanced.mpc:

          Changed from requires += exceptions to inheriting from exceptions. Hopefully
        this will eliminate fuzz errors.

Mon May 23 18:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/Quoter/RT_Event_Service/Quoter_RT_Event_Service.mpc:
          Updated for RTEvent library split

Mon May 23 18:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Simulator/Event_Supplier/Event_Supplier.mpc:
          Updated for RTEvent library split

Mon May 23 13:24:41 2005  Justin Michel  <michel_j@ociweb.com>

        * tao/ImR_Client/ImplRepo.pidl:
        * tao/ImR_Client/ImplRepoA.cpp:
        * tao/ImR_Client/ImplRepoC.h:
        * tao/ImR_Client/ImplRepoC.inl:
        * tao/ImR_Client/ImplRepoC.cpp:
        * tao/ImR_Client/ImplRepoS.h:
        * tao/ImR_Client/ImplRepoS.cpp:

          Re-added the -GA option and updated the command in the pidl to save
        footprint for static builds.
