@@ -1,3 +1,9 @@
+Tue May 24 10:32:31 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/orbsvcs/Makefile.am:
+
+	  Regenerated.
+
 Tue May 24 10:58:53 2005  Justin Michel  <michel_j@ociweb.com>
 
         * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
